--- a/CursosLibres/nbproject/project.properties
+++ b/CursosLibres/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_1.8_2
+platform.active=JDK_1.8
 project.modelo_bd=../../../backend_proyecto_progra4/modelo_bd
 reference.modelo_bd.jar=${project.modelo_bd}/dist/modelo_bd.jar
 resource.dir=setup
