--- a/CursosLibres/nbproject/project.properties
+++ b/CursosLibres/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\Esteban\\Desktop\\General\\progra 4\\conector_bd\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\YENDRI\\Dropbox\\Mi PC (LAPTOP-HBDHCDCT)\\Desktop\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +40,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${reference.modelo_bd.jar}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
