Cambios y se agrega un serlet

--- a/CursosLibres/web/WEB-INF/web.xml
+++ b/CursosLibres/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>ServicioHistorial</servlet-name>
         <servlet-class>servicios.ServicioHistorial</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegistroEstudiante</servlet-name>
+        <servlet-class>servicios.RegistroEstudiante</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServicioHistorial</servlet-name>
         <url-pattern>/ServicioHistorial</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegistroEstudiante</servlet-name>
+        <url-pattern>/RegistroEstudiante</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
