Se logra hacer el login

--- a/CursosLibres/web/WEB-INF/web.xml
+++ b/CursosLibres/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>RegistroEstudiante</servlet-name>
         <servlet-class>servicios.RegistroEstudiante</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServicioLogin</servlet-name>
+        <servlet-class>servicios.ServicioLogin</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServicioHistorial</servlet-name>
         <url-pattern>/ServicioHistorial</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>RegistroEstudiante</servlet-name>
         <url-pattern>/RegistroEstudiante</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServicioLogin</servlet-name>
+        <url-pattern>/ServicioLogin</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
