Se agregan clases para matricular y para ver lista de cursos y cambios

--- a/CursosLibres/web/WEB-INF/web.xml
+++ b/CursosLibres/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>ServicioLogin</servlet-name>
         <servlet-class>servicios.ServicioLogin</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServicioMatricula</servlet-name>
+        <servlet-class>servicios.ServicioMatricula</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServicioHistorial</servlet-name>
         <url-pattern>/ServicioHistorial</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>ServicioLogin</servlet-name>
         <url-pattern>/ServicioLogin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServicioMatricula</servlet-name>
+        <url-pattern>/ServicioMatricula</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
