--- a/CursosLibres/nbproject/project.properties
+++ b/CursosLibres/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.itext-5.0.5.jar=C:\\Users\\Greivin\\OneDrive\\Escritorio\\Proyecto 1\\itext-5.0.5.jar\\itext-5.0.5.jar
 file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\Esteban\\Desktop\\General\\progra 4\\conector_bd\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
 file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\YENDRI\\Dropbox\\Mi PC (LAPTOP-HBDHCDCT)\\Desktop\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
 includes=**
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.modelo_bd.jar}:\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}:\
+    ${file.reference.itext-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
